--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   "author": "Casper",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.13",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-inject": "^5.0.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-minify": "^3.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.5",
     "i": "^0.3.6",
     "wiredep": "^4.0.0"
   },
   "dependencies": {
-    "browserslist": "^4.6.3"
+    "browserslist": "^4.16.0"
   },
   "repository": {
     "type": "git",
